# actions-practice

./: CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ci.yml  hello.yml
src/: calc.h  main.cpp
tests/: test_calc.cpp
